Fixed bug with page splitting - That's the second time this week I've spent hours debugging a problem in my own code. Wewlad - Removed all warnings from touched files because I could